# tool

./: README.md
qtbackend/qtbackend/: CMakeLists.txt  interactor.cpp  interactor.h  internaltypes.h  qtbackend.sln  qtbackend.vcxproj  qtbackend.vcxproj.filters  qtbackend_global.h
qtfrontend/tool/: CMakeLists.txt  main.cpp  qmlmainadapter.cpp  qmlmainadapter.h
qtfrontend/tool/adapter/: qmlmainadapter.cpp  qmlmainadapter.h  qmlprototypeadapter.cpp  qmlprototypeadapter.h
qtfrontend/tool/qml/: BasicToolBar.qml  SideBar.qml  main.qml  qml.qrc
qtfrontend/tool/qml/ui/: ReadWriteText.ui.qml  prototype.qml
tool_tests/: CMakeLists.txt  gmock-gtest-all.cc  gmock.h  tests_Interactor.cpp
